# pq-tree-rs

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  node.rs  pq_tree.rs  reduction.rs  rel.rs  sublist.rs  templates.rs  tree.rs
tests/: consecutive_ones.rs  continious_ones.rs
